# aipractice

./: 123.py  app.py  chat.py  db.py  index.html  main.py  pyproject.toml  shop.db  tools.py
